--- a/environment.yml
+++ b/environment.yml
@@ -2,11 +2,10 @@ name: flow-pattern-map
 channels:
   - conda-forge
 dependencies:
-  #- ipython
-  - ipywidgets
+  - ipywidgets=8.1.3
   - jupyter
-  - matplotlib
-  - notebook
-  - numpy
-  - seaborn
-  - ipympl
+  - matplotlib=3.9.1
+  - notebook=7.2.1
+  - numpy=2.0.1
+  - seaborn=0.13.2
+  - ipympl=0.9.4
